# alx-ecommerce-api

./: .bandit.yml  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .safety-project.ini  API Endpoints.md  DEPLOYMENT.md  Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini  redis.conf  requirements.txt
.github/workflows/: ci.yml  django-ci-cd.yml  safety_scan.yml  tests.yml
apps/accounts/: admin.py  backends.py  models.py  serializers.py  tasks.py  tokens.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/emails/: password_reset_email.html  verification_email.html  verify_email.html  welcome_email.html
apps/core/: graphql.py  middleware.py  models.py  pagination.py  serializers.py  throttling.py  views.py
apps/core/management/commands/: celery.py
docs/api/: users.md
docs/guides/: authentication.md
ecommerce_backend/: __init__.py  asgi.py  celery.py  schema.py  settings_old.py  urls.py  wsgi.py
ecommerce_backend/settings/: base.py  development.py  production.py  testing.py
requirements/: base.txt  development.txt  production.txt
tests/unit/accounts/: test_accounts.py
